--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,2 @@
-MONGO = your mongo url
+MONGO = mongodb+srv://Viraj:N0TMOAn9hZzYtCUt@cluster0.ssbpou4.mongodb.net/booking?retryWrites=true&w=majority
 JWT = SKEY
